Refactor: 서비스 레이어 예외 처리 표준화
- 서비스 레이어에서 불필요한 try-catch 제거
- 비효율적인 Redis keys() 스캔 로직을 모두 제거
- 전역 핸들러로 오류 메시지 명확화